[tool.poetry]
name = "Projeto"
version = "0.1.0"
description = "Um projeto do BSI2"
authors = ["Vinicius Garcia Uliano <vgarciauliano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
